Diseño de componentes home, productos y algo más

--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header class="container-home">
+        <h1>Bienvenido al mundo Iwami</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vero aperiam error ad numquam, itaque minima
+            incidunt quisquam unde consequatur porro ducimus magnam necessitatibus, minus, a aliquam in ut facere!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vero aperiam error ad numquam, itaque minima
+            incidunt quisquam unde consequatur porro ducimus magnam necessitatibus, minus, a aliquam in ut facere!
+        </p>
+    </header>
+</body>
+</html>
