--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="../src/assets/icons/iwami2.jpeg">
-
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>IwamiPerzonalizados</title>
+        <base href="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="favico.ico">
+        <!---FONT--->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <!---BOOTSTRAP--->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+          crossorigin="anonymous"></script>
+      </head>
 <body>
     <header>
-        <app-nav-bar></app-nav-bar>   
+        <app-nav-bar></app-nav-bar>
     </header>
     <section>
         <router-outlet></router-outlet>
     </section>
-    <footer>
-        <hr>
-        <h1>Contacto</h1>
-        <P>Acá van los datos</P>
+    <footer>        
+        <app-footer></app-footer>
     </footer>
 </body>
 </html>   
