--- a/src/styles.css
+++ b/src/styles.css
@@ -1,59 +1,28 @@
 /* Application-wide Styles */
+* {
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+}
+
 h1 {
   color: rgb(221, 187, 74);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 250%;
+  font-weight: bold;
 }
 
 h2,
 h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
-
-body {
-  margin: 2em;
-}
-
-body,
-input[type="text"],
-button {
-  color: #333;
-  font-family: Cambria, Georgia, serif;
-}
-
-button {
-  background-color: rgb(173, 156, 156);
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  color: black;
-  font-size: 1.2rem;
-  padding: 1rem;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-}
-
-button:hover {
-  background-color: black;
-  color: white;
-}
-
-button:disabled {
-  background-color: #eee;
-  color: #aaa;
-  cursor: auto;
-}
-
-/* everywhere else */
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-hr{
-  border: 20px;
   color: rgb(221, 187, 74);
-  /* border: 5px; */
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
+
+
+body{
+  /* background-image: url("assets/imagenes/fondo.webp"); 
+  background-size: 100%;
+  background-position: center;
+  width: 100%; */
 }
