--- a/src/app/componentes/productos/productos.component.css
+++ b/src/app/componentes/productos/productos.component.css
@@ -3,7 +3,15 @@
     margin: 20px auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
+    gap: 20px;
+}
+
+.card:hover{
+    transform: scale(1.04);
+    position: relative;
+    cursor: pointer;
+    z-index: 1000;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
 
 .card-img{
