--- a/src/app/componentes/productos/productos.component.html
+++ b/src/app/componentes/productos/productos.component.html
@@ -1,5 +1,5 @@
 <div class="card-container">
-  <div class="card">
+  <div class="card" routerLink="">
     <div class="card-body">
     <img src="../../../assets/imagenes/vestido2.jpeg" class="card-img" alt="...">
     <hr>
