--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -7,10 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <hr>
+    <div class="footer-content">
+        <hr>
     <h1>Contacto</h1>
     <h2>Contacto</h2>
     <h3>Contacto</h3>
     <P>Acá van los datos, esto es una pruieba del footer como se vería</P>
+    </div>
+    
 </body>
 </html>
