--- a/src/app/componentes/nosotros/nosotros.component.html
+++ b/src/app/componentes/nosotros/nosotros.component.html
@@ -8,17 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Nuestra historia</h1>
-    <p>
+    <div class="we-content">
+        <h1>Nuestra historia</h1>
+    <p class="">
         Somos una empresa nacida y ubicada en Sabaneta, Antioquia. Justo al sur del Valle de Aburra surge esta necesidad de plasmar
         las ideas de nuestros clientes es sus prendas de vestir.
     </p>
-    <p>
+    <p class="">
         todo inicióm en el año 2018, cuando con solo tres personas y muchas ganas de salir adelante se fundó esta pequeña compañía
         que hoy dedica todo su esfuerzo y capacidad productiva a hacer de tus prendas de vestir todo un universo de sentimietos y 
         sensaciones que queremos expresar
     </p>
-    <p>
+    <p class="">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
         sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus exercitationem ratione, 
@@ -28,7 +29,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus exercitationem ratione, 
         perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae ad. Est, libero.
     </p>
-    <p>
+    <p class="">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
         sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus exercitationem ratione, 
@@ -36,12 +37,10 @@
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
         sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
     </p>
-    <p>
+    <p class="">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
         sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
     </p>
-    <h1>Misión</h1>
-    <h1>Visión</h1>
-    <h1>Mega</h1>
-</body>
+    </div>
+    </body>
 </html>
