--- a/src/app/componentes/nosotros/nosotros.component.html
+++ b/src/app/componentes/nosotros/nosotros.component.html
@@ -1,46 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Document</title>
 </head>
+
 <body>
     <div class="we-content">
-        <h1>Nuestra historia</h1>
-    <p class="">
-        Somos una empresa nacida y ubicada en Sabaneta, Antioquia. Justo al sur del Valle de Aburra surge esta necesidad de plasmar
-        las ideas de nuestros clientes es sus prendas de vestir.
-    </p>
-    <p class="">
-        todo inicióm en el año 2018, cuando con solo tres personas y muchas ganas de salir adelante se fundó esta pequeña compañía
-        que hoy dedica todo su esfuerzo y capacidad productiva a hacer de tus prendas de vestir todo un universo de sentimietos y 
-        sensaciones que queremos expresar
-    </p>
-    <p class="">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
-        sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus exercitationem ratione, 
-        perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae ad. Est, libero.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
-        sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus exercitationem ratione, 
-        perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae ad. Est, libero.
-    </p>
-    <p class="">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
-        sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus exercitationem ratione, 
-        perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae ad. Est, libero.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
-        sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
-    </p>
-    <p class="">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa, veritatis omnis nam quisquam 
-        sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
-    </p>
+        <div class="history-content">
+            <div class="history">
+                <h1>Nuestra historia</h1>
+                <p class="">
+                    Somos una empresa nacida y ubicada en Sabaneta, Antioquia. Justo al sur del Valle de Aburra surge
+                    esta
+                    necesidad de plasmar
+                    las ideas de nuestros clientes es sus prendas de vestir.
+                </p>
+                <p class="">
+                    todo inicióm en el año 2018, cuando con solo tres personas y muchas ganas de salir adelante se fundó
+                    esta
+                    pequeña compañía
+                    que hoy dedica todo su esfuerzo y capacidad productiva a hacer de tus prendas de vestir todo un
+                    universo
+                    de
+                    sentimietos y
+                    sensaciones que queremos expresar
+                </p>
+                <p class="">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa,
+                    veritatis
+                    omnis
+                    nam quisquam
+                    sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus
+                    exercitationem ratione,
+                    perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae
+                    ad.
+                    Est, libero.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa,
+                    veritatis
+                    omnis
+                    nam quisquam
+                    sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus
+                    exercitationem ratione,
+                    perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae
+                    ad.
+                    Est, libero.
+                </p>
+                <p class="">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa,
+                    veritatis
+                    omnis
+                    nam quisquam
+                    sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae perspiciatis nemo voluptatibus
+                    exercitationem ratione,
+                    perferendis delectus consequatur hic facilis ducimus ipsa odio vero expedita praesentium ipsum vitae
+                    ad.
+                    Est, libero.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa,
+                    veritatis
+                    omnis
+                    nam quisquam
+                    sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
+                </p>
+                <p class="">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi ullam animi odit, ipsa,
+                    veritatis
+                    omnis
+                    nam quisquam
+                    sed nemo non doloremque, autem ab eligendi officiis! Repellendus eius consectetur iure magnam?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eveniet laborum quibusdam ipsum
+                    facere
+                    dolorem dolores officiis? Laborum et, porro hic nobis ipsam repellat temporibus eius sit quod?
+                    Laboriosam,
+                    consequatur..50
+                </p>
+            </div>
+            <div class="history-img">
+                <img src="../../../assets/icons/historia.jpg" alt="">
+            </div>           
+        </div>
+        <div class="mision">
+            <h1>Misión</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, consequuntur nemo tempore
+                exercitationem
+                eos quaerat eius error! Porro nam iusto quam sed voluptatem optio dolorum perspiciatis aperiam
+                similique, enim, tempore quidem neque necessitatibus accusamus earum delectus non impedit fuga
+                tempora
+                unde iste molestias aut repellendus autem? Est ex, eos fugiat ipsam possimus voluptatem sint
+                distinctio
+                facere quibusdam cum molestias, consectetur suscipit magni! Cum veniam, suscipit debitis error fugit
+                doloribus nemo libero alias assumenda quisquam sequi dolor, ex beatae rerum nostrum totam adipisci!
+                Aperiam necessitatibus magni, repellendus dolor molestiae qui error inventore sint ea, eaque cumque
+                aliquid facere repellat officiis rerum.</p>
+        </div>
+        <div class="vision">
+            <h1>Visión</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, consequuntur nemo tempore exercitationem
+                eos quaerat eius error! Porro nam iusto quam sed voluptatem optio dolorum perspiciatis aperiam
+                similique, enim, tempore quidem neque necessitatibus accusamus earum delectus non impedit fuga tempora
+                unde iste molestias aut repellendus autem? Est ex, eos fugiat ipsam possimus voluptatem sint distinctio
+                facere quibusdam cum molestias, consectetur suscipit magni! Cum veniam, suscipit debitis error fugit
+                doloribus nemo libero alias assumenda quisquam sequi dolor, ex beatae rerum nostrum totam adipisci!
+                Aperiam necessitatibus magni, repellendus dolor molestiae qui error inventore sint ea, eaque cumque
+                aliquid facere repellat officiis rerum.</p>
+        </div>
+        <div class="mega">
+            <h1>Mega</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, consequuntur nemo tempore exercitationem
+                eos quaerat eius error! Porro nam iusto quam sed voluptatem optio dolorum perspiciatis aperiam
+                similique, enim, tempore quidem neque necessitatibus accusamus earum delectus non impedit fuga tempora
+                unde iste molestias aut repellendus autem? Est ex, eos fugiat ipsam possimus voluptatem sint distinctio
+                facere quibusdam cum molestias, consectetur suscipit magni! Cum veniam, suscipit debitis error fugit
+                doloribus nemo libero alias assumenda quisquam sequi dolor, ex beatae rerum nostrum totam adipisci!
+                Aperiam necessitatibus magni, repellendus dolor molestiae qui error inventore sint ea, eaque cumque
+                aliquid facere repellat officiis rerum.</p>
+        </div>
+
     </div>
-    </body>
+</body>
+
 </html>
