--- a/src/app/componentes/productos/productos.component.html
+++ b/src/app/componentes/productos/productos.component.html
@@ -13,7 +13,7 @@
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Vista rápida</a>
-      <a href="#" class="card-link">Comprar ahora</a>
+      <a href="#" class="card-link">Comprar</a>
     </div>
   </div>
   <div class="card">
@@ -30,7 +30,7 @@
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Vista rápida</a>
-      <a href="#" class="card-link">Comprar ahora</a>
+      <a href="#" class="card-link">Comprar</a>
     </div>
   </div>
   <div class="card">
@@ -47,7 +47,7 @@
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Vista rápida</a>
-      <a href="#" class="card-link">Comprar ahora</a>
+      <a href="#" class="card-link">Comprar</a>
     </div>
   </div>
   <div class="card">
@@ -64,7 +64,7 @@
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Vista rápida</a>
-      <a href="#" class="card-link">Comprar ahora</a>
+      <a href="#" class="card-link">Comprar</a>
     </div>
   </div>  
   <div class="card">
@@ -81,7 +81,7 @@
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Vista rápida</a>
-      <a href="#" class="card-link">Comprar ahora</a>
+      <a href="#" class="card-link">Comprar</a>
     </div>
   </div> 
   <div class="card">
@@ -98,7 +98,7 @@
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Vista rápida</a>
-      <a href="#" class="card-link">Comprar ahora</a>
+      <a href="#" class="card-link">Comprar</a>
     </div>
   </div> 
   <div class="card">
@@ -115,7 +115,7 @@
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Vista rápida</a>
-      <a href="#" class="card-link">Comprar ahora</a>
+      <a href="#" class="card-link">Comprar</a>
     </div>
   </div> 
   <div class="card">
@@ -132,7 +132,7 @@
     </ul>
     <div class="card-body">
       <a href="#" class="card-link">Vista rápida</a>
-      <a href="#" class="card-link">Comprar ahora</a>
+      <a href="#" class="card-link">Comprar</a>
     </div>
   </div>   
 </div>
