--- a/src/app/componentes/productos/productos.component.css
+++ b/src/app/componentes/productos/productos.component.css
@@ -2,7 +2,8 @@
     width: 95%;
     margin: 20px auto;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(auto, 1fr) ;
     gap: 20px;
 }
 
@@ -15,8 +16,8 @@
 }
 
 .card-img{
-    width: 100%;
-    height: 550px;
+    width: content;
+    height: 300px;
 }
 
 .card-text{
@@ -27,7 +28,7 @@
     text-decoration: none;
     font-weight: bold;
     color: black;
-    font-size: x-large;
+    font-size: large;
 }
 
 .card-link:hover{
