--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -2,7 +2,7 @@
     height: 800px;
     width: 95%;
     margin: auto;
-    background-image: url("../../../assets/imagenes/fondo2.webp");
+    background-image: url("../../../assets/imagenes/icons/fondo2.webp");
     display: flex;
     flex-direction: column;
     align-items: center;
