--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -12,7 +12,7 @@
     <h1>Contacto</h1>
     <h2>Contacto</h2>
     <h3>Contacto</h3>
-    <P>Acá van los datos, esto es una pruieba del footer como se vería</P>
+    <P>Acá van los datos, esto es una prueba de como se vería el footer</P>
     </div>
     
 </body>
