--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -7,13 +7,70 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="container-home">
+    <section class="container-home">
         <h1>Bienvenido al mundo Iwami</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vero aperiam error ad numquam, itaque minima
             incidunt quisquam unde consequatur porro ducimus magnam necessitatibus, minus, a aliquam in ut facere!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vero aperiam error ad numquam, itaque minima
             incidunt quisquam unde consequatur porro ducimus magnam necessitatibus, minus, a aliquam in ut facere!
         </p>
-    </header>
+
+        <button onclick="document.getElementById('login').style.display='block'" style="width:auto;">Login</button>
+        <div class="login-form modal-content animate modal" name="login" id="login" >
+          <form>
+            <div class="imgcontainer">
+              <span onclick="document.getElementById('login').style.display='none'" class="close" title="Close Modal">&times;</span>
+              <img src="../../../assets/imagenes/descarga.png" alt="Avatar" class="avatar">
+            </div>
+            <div class="input-group">
+              <label for="name">
+                Usuario:
+              </label>
+              <input type="text" name="user" id="user" [(ngModel)]="login.user" />
+              <p>Mensaje de error</p>
+            </div>
+            <div class="input-group">
+              <label for="password">
+                Contraseña:
+              </label>
+              <input type="password" name="password" id="password" [(ngModel)]="login.password" />
+              <p>Mensaje de error</p>
+            </div>
+            <div class="input-group">
+              <input type="button" name="ingresar" id="ingresar" value="Ingresar" />
+              <input type="button" name="registrar" id="registrar" value="Registrar" />
+            </div>
+
+          </form>
+        </div>
+
+        <div class="register-form" name="register" id="register" >
+          <form (ngSubmit)="onRegister()" #loginForm="ngForm">
+            <div class="input-group">
+              <label for="name">
+                Nombre:
+              </label>
+              <input type="text" name="name" id="name" [(ngModel)]="register.name" />
+              <p>Mensaje de error</p>
+            </div>
+            <div class="input-group">
+              <label for="email">
+                Email:
+              </label>
+              <input type="email" name="email" id="email" [(ngModel)]="register.email" />
+              <p>Mensaje de error</p>
+            </div>
+            <div class="input-group">
+              <label for="password">
+                Contraseña:
+              </label>
+              <input type="password" name="password" id="password" [(ngModel)]="register.password" />
+              <p>Mensaje de error</p>
+            </div>
+            <button type="submit" [disabled]="loginForm.invalid">Registrar</button>
+          </form>
+        </div>
+    </section>
+
 </body>
 </html>
