--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -1,19 +1,78 @@
 .container-home{
-    height: 800px;
-    width: 95%;
-    margin: auto;
-    background-image: url("../../../assets/imagenes/icons/fondo2.webp");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  height: 800px;
+  width: 95%;
+  margin: auto;
+  background-image: url("../../../assets/imagenes/icons/fondo2.webp");
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1{
-    margin: 20px;
+  margin: 20px;
 }
 p{
-    font-weight: 600;
-    color: white;
-    font-size: 20px;
-    margin: 20px;
+  font-weight: 600;
+  color: white;
+  font-size: 20px;
+  margin: 20px;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: auto;
+  top: 340px;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 5px;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+img.avatar {
+  width: 20%;
+  border-radius: 50%;
+}
+
+input[type=text], input[type=email], input[type=password]{
+  width: 90%;
+  padding: 10px 10px;
+  margin: 8px 0px 12px 0px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
